# Multi-Person-Pose-Estimation-using-LJPA-ECCVW-2016

./: LJPA_demo.cpp  Makefile  README.md  config_file.txt
cpp/body_pose/: body_part_sample.hpp  body_pose_types.hpp  common.hpp  nbest_body_pose_utils.cpp  nbest_body_pose_utils.hpp  performance_metrics.cpp  pose.hpp  utils.cpp  utils.hpp
cpp/body_pose/clustering/: #cluster_tool.cpp#  body_clustering.cpp  cluster_tool.cpp
cpp/body_pose/poselets/: poselet_sample.cpp  poselet_sample.hpp  poselets.cpp  poselets.hpp
cpp/learning/SPLP/: #detection.hpp#  detection.hpp  detection.hpp~  learn_model_parameter.cpp  learn_model_parameter.hpp  splp.cpp  splp.hpp  utils.cpp  utils.hpp
cpp/learning/SPLPI/: SPLP.hpp~  detection.hpp  learn_model_parameter.cpp  learn_model_parameter.hpp  splpi.cpp  splpi.cpp~  splpi.hpp  utils.cpp  utils.hpp
cpp/learning/agglomerative_clustering/: clustering.cpp  clustering.hpp  linkage.cpp  linkage.hpp
cpp/learning/boosting/: adaboost.cpp  adaboost.hpp  adaboost_main.cpp  boosting_sample.hpp  cascade.cpp  cascade.hpp  cascade_main.cpp  cascade_test.cpp  eval_cascade.cpp  features_test.cpp  weak_classifier.cpp  weak_classifier.hpp
cpp/learning/lda_trick/: linear_classifier.cpp  linear_classifier.hpp  negative_model.cpp  negative_model.hpp  online_covariance.cpp  online_covariance.hpp  train_negative_model_main.cpp
cpp/learning/logistic_regression/: CMakeLists.txt  LogisticRegression.cpp  LogisticRegression.hpp  Main.cpp  README.md  digitdata2.txt
cpp/learning/pictorial_structure/: inferenz.cpp  inferenz.hpp  learn_model_parameter.cpp  (+8 more)
(+61 files in other folders)
